--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
             <div class="text">
                 <h1>Congratulations and the most warm felicitations!</h1>
                 <h2>You just created a Node.js web application</h2>
+                <h3>Maybe you think you're pretty hot now, huh?</h3>
             </div>
         </div>
     </div>
